hphp/hack/test/typecheck/void_usage_placeholder.php
<?hh

function takes_mixed(mixed $_): void {}

function test(): void {
  takes_mixed($_);
}
